<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">
	<androidx.constraintlayout.widget.ConstraintLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/tool_bar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="@color/white"
			android:elevation="4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<ImageView
				android:id="@+id/btn_back"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="20dp"
				android:paddingVertical="12dp"
				android:contentDescription="@string/back_label"
				android:src="@drawable/ic_back"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

			<TextView
				android:id="@+id/title"
				style="@style/Bridge.TextAppearance.Normal.Large"
				android:layout_width="0dp"
				android:layout_height="0dp"
				android:layout_marginStart="16dp"
				android:layout_marginEnd="20dp"
				android:gravity="center_vertical"
				android:text="@string/app_name"
				android:textSize="16sp"
				android:textStyle="bold"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toEndOf="@id/btn_back"
				app:layout_constraintTop_toTopOf="parent" />

		</androidx.constraintlayout.widget.ConstraintLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/pupil_list"
			tools:listitem="@layout/item_pupil"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tool_bar"/>

		<com.github.ybq.android.spinkit.SpinKitView
			android:id="@+id/progress_loader"
			style="@style/SpinKitView.Large.FoldingCube"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:visibility="gone"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintTop_toBottomOf="@id/tool_bar"
			app:SpinKit_Color="@color/bridge_green_primary" />

		<com.google.android.material.floatingactionbutton.FloatingActionButton
			android:id="@+id/add_pupil_btn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:clickable="true"
            android:contentDescription="@string/add_pupil"
            app:layout_constraintEnd_toEndOf="parent"
			app:srcCompat="@drawable/ic_add"
			app:tint="@color/white"
			app:backgroundTint="@color/bridge_text_secondary"
			app:layout_constraintBottom_toBottomOf="parent"
			android:layout_marginBottom="20dp"
			android:layout_marginEnd="20dp"/>


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
