<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:elevation="1dp"
            tools:title="Edit Pupil Details"
            app:navigationIcon="@drawable/ic_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ScrollView
            android:id="@+id/main_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar"
            app:layout_constraintBottom_toTopOf="@id/button_frame">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pupil_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="30dp"
                    android:contentDescription="@string/pupil_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/profile_image" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/edit_image_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="1dp"
                    android:background="@drawable/bg_circle"
                    android:translationX="-30dp"
                    android:translationY="-5dp"
                    android:backgroundTint="@color/bridge_green_primary"
                    app:layout_constraintBottom_toBottomOf="@+id/pupil_image"
                    app:layout_constraintStart_toEndOf="@+id/pupil_image">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/edit_image_icon"
                        android:src="@drawable/ic_edit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/white" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pupil_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    app:boxStrokeColor="@color/bridge_green_primary"
                    style="@style/Bridge.TextInputLayout"
                    app:boxBackgroundMode="filled"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/pupil_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:hint="@string/name"
                    app:startIconDrawable="@string/edit_image_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pupil_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Bridge.TextAppearance.Normal"
                        android:minLines="1"
                        android:inputType="textPersonName|textCapWords" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.hbb20.CountryCodePicker
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    app:ccp_showFullName="true"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textSize="14sp"
                    app:ccp_showArrow="false"
                    app:ccp_defaultNameCode="NG"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/pupil_name_input_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteX="-11dp"
                    tools:layout_editor_absoluteY="49dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>






        <FrameLayout
            android:id="@+id/button_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnQuickAction"
                style="@style/Bridge.Button.Primary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="20dp"
                tools:visibility="visible" />

        </FrameLayout>





    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
